--- a/garmin-boulder-grades/README
+++ b/garmin-boulder-grades/README
@@ -1,2 +1,4 @@
 Time series data visualization over time
 https://machinelearningmastery.com/time-series-data-visualization-with-python/
+
+Data mine insights from Garmin Boulder data (https://apps.garmin.com/en-US/apps/48adec44-2ce8-4668-b303-fd30e61a3d0d) 
